--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -4,3 +4,5 @@ PG_PORT=5432
 PG_USER=your_db_user
 PG_PASSWORD=your_db_password
 PG_DATABASE=your_db_name
+JWT_SECRET=your_jwt_secret
+PORT=your_port
